更新模板生成
