# src/Studio/ClientApp/src/app/services/gen-action/models/gen-action-run-dto.model.ts
@@ -1,0 +1,18 @@
+/**
+ * 操作执行模型
+ */
+export interface GenActionRunDto {
+  /**
+   * 操作id
+   */
+  id: string;
+  /**
+   * 源文件路径
+   */
+  sourceFilePath?: string | null;
+  /**
+   * 是否写入文件
+   */
+  isFile: boolean;
+
+}
